# 4SConexao-SGM-2

./: .gitignore  Contato - 4S Conexão  README.md  docker-compose.local.yml  docker-compose.yml
backend/acervo_api/: Dockerfile  pyproject.toml
backend/acervo_api/api/: app.py  config.py  exception_handlers.py  exceptions.py  middleware.py  models.py  schemas.py
backend/acervo_api/api/routers/: arquivos.py  pastas.py  permissoes.py  webhooks.py
backend/acervo_api/api/services/auth/: auth_service.py
backend/acervo_api/api/services/auth/domains/: estabelecimento_domain.py  users_domain.py
backend/acervo_api/api/services/permissions/: permission_service.py
backend/acervo_api/api/services/storage/: r2_service.py
backend/acervo_api/api/services/sync/: sync_service.py
backend/acervo_api/api/utils/: files.py
backend/auth_api/: Dockerfile  pyproject.toml
backend/auth_api/api/: app.py  config.py  exception_handlers.py  exceptions.py  middlewares.py  models.py  schemas.py  security.py
backend/auth_api/api/routers/: auth.py  estabelecimentos.py  funcionalidades.py  orgaos.py  pacotes.py  pacotes_transparencia.py  users.py
backend/auth_api/api/services/webhooks/: acervo_webhooks.py
backend/auth_api/api/utils/: files.py
backend/contratacao_api/: Dockerfile  pyproject.toml
backend/contratacao_api/api/: app.py  config.py  enums.py  exception_handlers.py  exceptions.py  middlewares.py  models.py  schemas.py
backend/contratacao_api/api/routers/: comissao.py  contrato.py  dispensas.py  docs.py  edital.py  fiscal_contrato.py  fiscalizacao_contrato.py  licitacoes.py  membro_comissao.py  modalidades.py  pessoas.py  relatorios.py  secoes.py  vigencia.py
backend/contratacao_api/api/services/auth/: auth_service.py
backend/contratacao_api/api/services/auth/domains/: estabelecimento_domain.py  users_domain.py
backend/contratacao_api/api/services/pdf/: pdf_service.py
backend/contratacao_api/api/utils/: files.py  scheduler.py
backend/doem_api/: Dockerfile  pyproject.toml
backend/doem_api/api/: app.py  config.py  exception_handlers.py  exceptions.py  middlewares.py  models.py  schemas.py
backend/email_microservice/: Dockerfile  pyproject.toml
backend/email_microservice/api/: app.py  config.py  schemas.py  templates.py
backend/ged_api/: Dockerfile  pyproject.toml
backend/ged_api/api/: app.py  config.py  exception_handlers.py  exceptions.py  middleware.py  models.py  schemas.py
backend/ged_api/api/routers/: docmodels.py  docs.py  relatorio.py  statistics.py  tipo.py  vereador.py
backend/ged_api/api/services/auth/domains/: estabelecimento_domain.py  users_domain.py
backend/ged_api/api/services/doem/: doem_service.py
backend/ged_api/api/services/pdf/: pdf_service.py
backend/ouvidoria_api/: Dockerfile  pyproject.toml
backend/ouvidoria_api/api/: app.py  config.py  exception_handlers.py  exceptions.py  middleware.py  models.py  schemas.py
backend/ouvidoria_api/api/routers/: chamados.py  documentos.py  relatorios.py  retorno_chamado.py
backend/ouvidoria_api/api/services/auth/: auth_service.py
backend/ouvidoria_api/api/services/auth/domains/: estabelecimento_domain.py  users_domain.py
backend/ouvidoria_api/api/services/pdf/: pdf_service.py
backend/ouvidoria_api/api/utils/: files.py  limiter.py
backend/pdf_service/: Dockerfile  pyproject.toml
backend/pdf_service/api/: app.py  config.py  exception_handlers.py  exceptions.py  middleware.py  schemas.py
backend/pdf_service/api/pdf_controller/: certificado_publicacao.py  diario.py  relatorio_contratacao.py  relatorio_esic.py  relatorio_fiscal.py  relatorio_ged.py  relatorios_transparencia.py
backend/pdf_service/api/routers/: __init__.py  contratacao.py  diario.py  ged.py  ouvidoria.py  transparencia.py
backend/pdf_service/api/services/auth/: auth_service.py
backend/pdf_service/api/services/auth/domains/: estabelecimento_domain.py  users_domain.py
backend/transparencia_api/: Dockerfile  pyproject.toml
backend/transparencia_api/api/: app.py  config.py  exception_handlers.py  exceptions.py  middleware.py  models.py  schemas.py
frontend/: .env.local  Dockerfile  cpf-formatting-example.js  middleware.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.js  page.js
frontend/app/admin/: layout.js  page.js
frontend/app/api/: apiAcervo.js  apiOrgaos.js  apiUsuarios.js
frontend/app/components/: ArquivoAcervoDigital.js  DescricaoTruncada.js  FormularioEdital.js  FormularioFiltrosAvancado.js  FormularioPessoaFisica.js  FormularioPessoaJuridica.js  PaginacaoAvancada.js  PaginacaoDOEM.js  PastaAcervoDigital.js  conteudoUsuario.js  dadosSuporte.js  footer.js  formulario.js  gerenciadorDePessoas.js  grafico.js  header.js  loginform.js  logout.js  menuLateral.js  modal.js  pdfViewer.js  tabela.js  tableDocs.js
frontend/app/context/: AuthContext.js  funcContext.js  pessoasContext.js
frontend/app/contratos_iframe/: page.js
frontend/app/dashboard/: layout.js  page.js
frontend/app/dispensas_iframe/: page.js
frontend/app/emendas_parlamentares_iframe/: page.js
frontend/app/esqueci-minha-senha/: layout.js  page.js
frontend/app/fiscal_contrato_iframe/: page.js
frontend/app/ged_iframe/: page.js
frontend/app/licitacoes_iframe/: page.js
frontend/app/redefinir-senha/: layout.js  page.js  redefinirsenha.js
frontend/app/transferencias_realizadas_convenios_iframe/: page.js
frontend/app/transferencias_recebidas_convenios_iframe/: page.js
frontend/app/utils/: formatarMoeda.js  promise-polyfill.js  useRouterAsync.js
frontend/constants/: dadosEmpresa.js
(+195 files in other folders)
