[tool.poetry]
name = "acervo_api"
version = "0.1.0"
description = "Repositório de múltiplos microserviços para 4SConexao-SGM"
authors = ["Lucas Franco <127855437+lucasfc-dev@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.3.4"
tortoise-orm = "^0.21.5"
python-multipart = "^0.0.12"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
tomlkit = "^0.13.2"
httpx = "^0.28.1"
asyncpg = "^0.30.0"
aioboto3 = "^15.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

