[tool.poetry]
name = "doem_api"
version = "0.1.0"
description = "Repositório de múltiplos microserviços para 4SConexao-SGM"
authors = ["Lucas Franco <127855437+lucasfc-dev@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
requests = "^2.32.3"
jinja2 = "^3.1.4"
asyncpg = "^0.29.0"
tzdata = "^2024.2"
aiosmtplib = "^3.0.0"  

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

