[tool.poetry]
name = "ouvidoria-api"
version = "0.1.0"
description = ""
authors = ["Lucas Franco <127855437+lucasfc-dev@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.119.1,<0.120.0"
uvicorn = ">=0.38.0,<0.39.0"
tortoise-orm = ">=0.25.1,<0.26.0"
python-dotenv = ">=1.1.1,<2.0.0"
python-multipart = "^0.0.20"
asyncpg = "^0.31.0"
httpx = "^0.28.1"
aerich = "^0.9.2"
tomlkit = "^0.13.3"
pydantic = {extras = ["email"], version = "^2.12.3"}
pandas = "^2.3.3"
slowapi = "^0.1.9"

[tool.aerich]
tortoise_orm = "api.config.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
